# armada

./: .dockerignore  .editorconfig  .gitattributes  .gitignore  .gitpod.Dockerfile  .gitpod.yml  .golangci.yaml  .golangci.yml  .goreleaser.dev.yml  .goreleaser.rc.yml  .goreleaser.yml  .mergify.yml  .protolint.yaml  404.html  500.html  ADOPTERS.md  AGENTS.md  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Developer.md  GKE_GUIDE.md  GUIDE.md  Gemfile  GitVersion.yml  MAINTAINERS.md  README.md  README.txt  ROADMAP.md  SECURITY.md  _config.yml  api-requests.rest  api.md  architecture.md  armada-api.md  armada_airflow_operator.md  armada_client_package.md  armada_demo.md  buf.gen.yaml  buf.yaml  (+47 more)
.circleci/: config.yml
.devcontainer/: Dockerfile  devcontainer.json  postCreate.sh
.github/: PULL_REQUEST_TEMPLATE.md  README.md  dependabot.yml  gh-to-slackid  labeler.yml
.run/: Armada (Legacy Scheduler).run.xml  Armada (Pulsar Scheduler).run.xml  Armada HC.run.xml  Armada Infrastructure Services.run.xml  Armada.run.xml  Basic Tests.run.xml  Binoculars.run.xml  Create Kind Docker Network.run.xml  Event Ingester.run.xml  Executor.run.xml  Infrastructure Services.run.xml  Legacy Executor.run.xml  Legacy Server.run.xml  Lookout HC Ingester.run.xml  Lookout HC UI.run.xml  Lookout HC.run.xml  Lookout Ingester V2.run.xml  Lookout Ingester.run.xml  Lookout UI.run.xml  Lookout.run.xml  LookoutV2 UI.run.xml  LookoutV2.run.xml  Pulsar Executor.run.xml  Pulsar Server.run.xml  Run Migrations.run.xml  Scheduler Ingester.run.xml  Scheduler.run.xml  Server.run.xml  Start Dependencies.run.xml  lookoutPostgresMigration.run.xml  lookouthcPostgresMigration.run.xml  lookoutv2PostgresMigration.run.xml  postgresPulsarMigration.run.xml  schedulerPostgresMigration.run.xml
_data/: settings.yml
_includes/: footer.html  header.html  home-sample.html
_layouts/: default.html  pages.html  redirect.html
_local/: .armadactl.yaml  README.md  docker-compose-deps.yaml  priority-class.yaml  prometheus.yml  readiness-job.yaml
_news/: test1.md  test2.md  test3.md  test4.md
_pages/: api.md  contact.md  design.md  development.md
_site/: 404.html  500.html  api.html  contact.html  contribute.html  design.html  developer.html  development.html  executor.md  headings.html  index.html  job.html  job.md  kind-config-server.yaml  priority.html  production-install.html  production.html  quickstart.html  quickstart.md  server-values.yaml  sitemap.xml  user.html
client/python/: .env  CONTRIBUTING.md  README.md  client.py  pylintrc  pyproject.toml  setup.py  test.py  tox.ini
client/python/armada/client/: event_pb2.py  event_pb2_grpc.py  queue_pb2.py  queue_pb2_grpc.py  submit_pb2.py  submit_pb2_grpc.py  usage_pb2.py  usage_pb2_grpc.py
client/python/armada_client/: .python-version  __init__.py  _proto_methods.py  asyncio_client.py  auth_data.py  binoculars_client.py  client.py  event.py  iterators.py  jobcache.py  jobservice.py  log_client.py  permissions.py
client/python/armada_client/generated_client/: event_pb2.py  event_pb2_grpc.py  queue_pb2.py  queue_pb2_grpc.py  submit_pb2.py  submit_pb2_grpc.py  usage_pb2.py  usage_pb2_grpc.py
client/python/armada_client/google/api/: annotations_pb2.py
client/python/armada_client/internal/: __init__.py  binoculars_client.py
client/python/armada_client/k8s/io/api/core/v1/: generated_pb2.py
client/python/armada_client/k8s/io/api/networking/v1/: generated_pb2.py
client/python/armada_client/k8s/io/apimachinery/pkg/api/resource/: generated_pb2.py
client/python/armada_client/k8s/io/apimachinery/pkg/apis/meta/v1/: generated_pb2.py
client/python/code_gen/: event_typings.py
client/python/docs/: README.md
client/python/docs/source/: conf.py  python_armada_client.rst
client/python/examples/: README.md  async_logging.py  auth.py  binoculars.py  cancelling.py  general.py  jobs.py  monitor.py  multiple_job_preemption_with_resubmission.py  oidc.py  preempting.py  queues.py  simple.py  threading_events.py
client/python/github/com/gogo/protobuf/gogoproto/: gogo_pb2.py
client/python/google/api/: http_pb2.py
client/python/k8s/io/api/core/v1/: generated_pb2.py
client/python/k8s/io/apimachinery/pkg/apis/meta/v1/: generated_pb2.py
client/python/k8s/io/apimachinery/pkg/runtime/: generated_pb2.py
client/python/k8s/io/apimachinery/pkg/runtime/schema/: generated_pb2.py
client/python/k8s/io/apimachinery/pkg/util/intstr/: generated_pb2.py
client/python/tests/: run_server.sh  run_unit.sh  test.py  test_auth_data.py  test_basic_auth.py  test_no_auth.py
client/python/tests/grpc_server_mock/: server_mock.py
client/python/tests/integration/: test_basic_auth.py  test_no_auth.py  test_typing_gen.py
client/python/tests/unit/: server_mock.py  test_asyncio_client.py  test_binoculars_client.py  test_client.py  test_event.py  test_gen.py  test_iterators.py  test_log_clients.py  test_permissions.py  test_search_for_job_complete.py
client/python/tests/unit/grpc_server_mock/: server_mock.py
client/rust/: .gitignore  Cargo.toml  README.md  build.rs
client/rust/examples/: cancel.rs  cancelling.rs  general.rs  simple.rs  submit.rs  watch.rs
client/rust/examples/common/: mod.rs
client/rust/src/: auth.rs  builder.rs  client.rs  error.rs  lib.rs
config/: logging-dev.yaml  logging.yaml
deployment/: output.yaml  overrides.yamnl
design/: index.md  priority.md
developer/: README.md  init.sh  start.sh  ui.md  usage_metrics.md
docs/: README.md  api.md  architecture.md  armada_airflow_operator.md  armada_client_package.md  armada_helm_charts.md  auth.md  client_libraries.md  comparison.md  consistency.md  creating_and_submitting_jobs.md  demo.md  design.md  developer.md  developer_guide.md  development_guide.md  docs-readme.md  events_by_day.md  floating_resources.md  helm.md  job-service.md  job.md  libraries.md  maintaining_consistency_across_views.md  metrics.md  priority.md  production-install.md  python_airflow_operator.md  python_armada_client.md  quickstart.md  retry_policies.md  roadmap.md  scheduler.md  scheduling_and_preempting_jobs.md  slurm-integration.md  (+5 more)
(+4315 files in other folders)
