[project]
name = "armada_client"
version = "0.5.0"
description = "Armada gRPC API python client"
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["grpcio==1.76.0", "grpcio-tools==1.76.0", "mypy-protobuf>=3.6.0", "protobuf>=6.32.1" ]
license = { text = "Apache Software License" }
authors = [{ name = "G-Research Open Source Software", email = "armada@armadaproject.io" }]

[project.optional-dependencies]
format = ["black>=23.7.0", "flake8>=7.0.0", "pylint>=2.17.5"]
docs = ["sphinx==9.1.0", "sphinx-toolbox==4.2.0", "sphinx-markdown-builder==0.6.10"]
test = ["pytest==9.0.3", "coverage==7.14.1", "pytest-asyncio==1.4.0"]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.mypy]
exclude = [
    '^typings\.py$',
    '_pb2_\.pyi$',
    '_pb2\.pyi$',
    '_pb2_grpc\.pyi$',

    '_pb2_\.py$',
    '_pb2\.py$',
    '_pb2_grpc\.py$',
]

[tool.coverage.run]
omit = [
    "*_pb2.py",
    "*_pb2_grpc.py",
]

# py.typed is required for mypy to find type hints in the package
# from: https://mypy.readthedocs.io/en/stable/installed_packages.html#making-pep-561-compatible-packages
[tool.setuptools.package-data]
"*" = ["*.pyi", "py.typed"]
