[package]
name = "armada-client"
version = "0.2.2"
edition = "2024"
rust-version = "1.85"
description = "Rust client for the Armada batch job scheduler"
license = "Apache-2.0"
repository = "https://github.com/armadaproject/armada"
homepage = "https://armadaproject.io"
documentation = "https://docs.rs/armada-client"
keywords = ["armada", "kubernetes", "batch", "jobs", "grpc"]
categories = ["api-bindings"]
include = ["src/**/*", "build.rs", "examples/**/*", "README.md"]

[lib]
name = "armada_client"
path = "src/lib.rs"
doctest = false

# examples/common/ is a shared helper module used by submit, watch, and cancel.
# It is not a standalone example binary; it is included in the tarball via
# examples/**/* and compiled as part of those example builds.
[[example]]
name = "submit"
path = "examples/submit.rs"

[[example]]
name = "watch"
path = "examples/watch.rs"

[[example]]
name = "cancel"
path = "examples/cancel.rs"

[dependencies]
tonic = { version = "0.14", features = ["tls-ring", "tls-native-roots"] }
tonic-prost = "0.14"
prost       = "0.14"
prost-types = "0.14"  # must stay in sync with prost version
futures = "0.3"
tracing = "0.1"
thiserror = "1"
base64 = "0.22"

[build-dependencies]
tonic-prost-build = "0.14"

[dev-dependencies]
# rt-multi-thread + macros only needed for #[tokio::main] in examples and #[tokio::test]
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
tracing-subscriber = "0.3"
